--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,17 @@
       <version>1.2.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.googlecode.flyway</groupId>
+      <artifactId>flyway-core</artifactId>
+      <version>2.2.1</version>
+    </dependency>
+        
+    <dependency>
+   	  <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.26</version>
+    </dependency>
+
   </dependencies>
 </project>
