--- a/pom.xml
+++ b/pom.xml
@@ -75,5 +75,11 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>15.0</version>
+    </dependency>
+
   </dependencies>
 </project>
