--- a/pom.xml
+++ b/pom.xml
@@ -81,5 +81,11 @@
       <version>15.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.1</version>
+    </dependency>
+
   </dependencies>
 </project>
