--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,18 @@
           <maxmem>512m</maxmem>
         </configuration>
       </plugin>
+
+
+      <plugin>
+        <groupId>com.googlecode.flyway</groupId>
+        <artifactId>flyway-maven-plugin</artifactId>
+        <version>2.2.1</version>
+        <configuration>
+          <url>jdbc:mysql://localhost:8889/ppardb</url>
+          <user>root</user>
+          <password>root</password>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -62,11 +74,7 @@
       <version>1.2.1</version>
     </dependency>
 
-    <dependency>
-      <groupId>com.googlecode.flyway</groupId>
-      <artifactId>flyway-core</artifactId>
-      <version>2.2.1</version>
-    </dependency>
+
 
     <dependency>
       <groupId>org.testng</groupId>
