--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <configuration>
           <url>jdbc:mysql://localhost:3306/ppardb</url>
           <user>root</user>
-          <password>root</password>
+          <password></password>
         </configuration>
       </plugin>
     </plugins>
