--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,9 @@
         <artifactId>flyway-maven-plugin</artifactId>
         <version>2.2.1</version>
         <configuration>
-          <url>jdbc:mysql://localhost:3306/ppardb</url>
+          <url>jdbc:mysql://localhost:8889/ppardb</url>
           <user>root</user>
-          <password></password>
+          <password>root</password>
         </configuration>
       </plugin>
     </plugins>
