--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
   <artifactId>ppar</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <properties>
+    <ppar.database>ppardb</ppar.database>
+    <ppar.host>localhost</ppar.host>
+    <ppar.port>3306</ppar.port>
+    <ppar.username>root</ppar.username>
+    <ppar.root>root</ppar.root>
+  </properties>
+
   <build>
     <testResources>
       <testResource>
@@ -29,13 +37,25 @@
         </configuration>
       </plugin>
 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 
       <plugin>
         <groupId>com.googlecode.flyway</groupId>
         <artifactId>flyway-maven-plugin</artifactId>
         <version>2.2.1</version>
         <configuration>
-          <url>jdbc:mysql://localhost:8889/ppardb</url>
+          <url>jdbc:mysql://localhost:3306/ppardb</url>
           <user>root</user>
           <password>root</password>
         </configuration>
@@ -93,6 +113,12 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jdbi</groupId>
+      <artifactId>jdbi</artifactId>
+      <version>2.51</version>
     </dependency>
 
   </dependencies>
