--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,12 @@
       <version>2.51</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.8</version>
+    </dependency>
+
   </dependencies>
 
   <!--
