--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
       <artifactId>exec-maven-plugin</artifactId>
       <version>1.2.1</version>
     </dependency>
+    
+    <dependency>
+		<groupId>com.jcraft</groupId>
+		<artifactId>jsch</artifactId>
+		<version>0.1.50</version>
+	</dependency>
+            
 
 
 
