--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sunnyd.ppar</groupId>
     <artifactId>ppar</artifactId>
@@ -48,17 +49,29 @@
                 </executions>
             </plugin>
 
+            <!--Maven load fixture command-->
+            <!--flyway:migrate -Dflyway.locations=classpath:db/fixture-->
             <plugin>
                 <groupId>com.googlecode.flyway</groupId>
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>2.2.1</version>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>clean</goal>
+                            <goal>init</goal>
+                            <goal>migrate</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <url>jdbc:mysql://localhost:3306/ppardb</url>
                     <user>root</user>
                     <password>root</password>
                 </configuration>
             </plugin>
-            
+
             <plugin>
                 <groupId>com.github.github</groupId>
                 <artifactId>site-maven-plugin</artifactId>
@@ -153,6 +166,7 @@
             <artifactId>commons-codec</artifactId>
             <version>1.8</version>
         </dependency>
+
     </dependencies>
 
     <!-- http://stackoverflow.com/questions/14013644/hosting-a-maven-repository-on-github -->
